@@ -126,6 +126,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13770) Fixed incorrect detection of PHP's DOM module
 * (bug 14790) Export of category pages when using Category: prefix now actually
   gives results
+* Avoid recursive crazy expansions in section edit comments for pages which
+  contain '/*' in the title
 
 === API changes in 1.14 ===
 
